Update cats vs dogs.ipynb

--- a/cats vs dogs.ipynb
+++ b/cats vs dogs.ipynb
@@ -805,7 +805,7 @@
    "source": [
     "from keras.models import load_model\n",
     "\n",
-    "dir_path = r"your_path",
+    "dir_path = r"dir_path",
     "\n",
     "for i in os.listdir(dir_path) :\n",
     "    img = image.load_img(dir_path +'\\\\'+ i, target_size=(50,50) )\n",
